--- a/src/app/partido/partido-list/partido-list.component.html
+++ b/src/app/partido/partido-list/partido-list.component.html
@@ -1,17 +1,26 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col mb-2" *ngFor="let partido of partidos">
-          <div class="card p-2" style="width: 15rem; height: 33rem">
-              <img
-
-                src="{{ partido.away_team.name }}"
-                alt="{{ partido.away_team.name }}"
-              />
-              <div class="card-body">
-                <h5 class="card-title">{{ partido.stage_name }}</h5>
-                  <p class="card-text">[{{ partido.attendance }}]</p>
-              </div>
-           </div>
-      </div>
-   </div>
+  <div class="col-6">
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="h4">Date</th>
+          <th class="h4">Home</th>
+          <th class="h4">Away</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor= "let p of partidos">
+          <td>
+            <dd>{{p.location}}</dd>
+          </td>
+          <td>
+            <dd>{{p.home_team.name}}</dd>
+          </td>
+          <td>
+            <dd>{{p.away_team.name}}</dd>
+          </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
