--- a/src/app/partido/partido-list/partido-list.component.html
+++ b/src/app/partido/partido-list/partido-list.component.html
@@ -3,9 +3,12 @@
     <table class="table">
       <thead>
         <tr>
-          <th class="h4">Date</th>
+          <th class="h4">Location</th>
           <th class="h4">Home</th>
           <th class="h4">Away</th>
+          <th class="h4">Status</th>
+          <th class="h4">Goals Home</th>
+          <th class="h4">Goals Away</th>
         </tr>
       </thead>
       <tbody>
@@ -18,6 +21,15 @@
           </td>
           <td>
             <dd>{{p.away_team.name}}</dd>
+          </td>
+          <td>
+            <dd>{{p.status}}</dd>
+          </td>
+          <td>
+            <dd>{{p.home_team.goals}}</dd>
+          </td>
+          <td>
+            <dd>{{p.away_team.goals}}</dd>
           </td>
       </tr>
       </tbody>
