final. Ya se muestran todos los punto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<app-partido-list></app-partido-list>
-<app-equipo-list></app-equipo-list>
+
+<h1 class = "text-center" style="background-color: antiquewhite;">Bienvenido al mundial 2022</h1>
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-md-6" style="background-color: aliceblue;">
+      <app-partido-list></app-partido-list>
+    </div>
+    <div class = "col-md-6" style="background-color: aliceblue;">
+      <app-equipo-list></app-equipo-list>
+    </div>
+  </div>
+</div>
 
