--- a/src/app/equipo/equipo-detail/equipo-detail.component.html
+++ b/src/app/equipo/equipo-detail/equipo-detail.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <p class="h3 p-3">{{ equipoDetail.name }}</p>
+  <p class="h3 p-3" style = "background-color: bisque;">{{ equipoDetail.name }}</p>
   <div class="row">
     <div class="col-2">
     </div>
-    <div class="col">
+    <div class="col" style="background-color: rgb(236, 224, 210);">
       <dl>
         <dt>Country</dt>
         <dd>{{equipoDetail.country}}</dd>
